--- a/createconnectiondialog.ui
+++ b/createconnectiondialog.ui
@@ -160,7 +160,7 @@
     </widget>
    </item>
    <item row="3" column="1" colspan="4">
-    <widget class="QLineEdit" name="lenghtOfWayTextEdit_2">
+    <widget class="QLineEdit" name="lenghtOfWayTextEdit">
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -181,7 +181,7 @@
   </layout>
  </widget>
  <tabstops>
-  <tabstop>lenghtOfWayTextEdit_2</tabstop>
+  <tabstop>lenghtOfWayTextEdit</tabstop>
   <tabstop>createButton</tabstop>
   <tabstop>cancelButton</tabstop>
  </tabstops>
